[gd_scene load_steps=5 format=3 uid="uid://bhac3v2o77qhm"]

[ext_resource type="Texture2D" uid="uid://bwuxiotk3675c" path="res://assets/space.png" id="1_64rm2"]
[ext_resource type="Script" path="res://effects/space_background.gd" id="1_xjvy5"]
[ext_resource type="Texture2D" uid="uid://b8akihxjqpxs0" path="res://assets/far_stars.png" id="2_raulv"]
[ext_resource type="Texture2D" uid="uid://dw28svaf7aum1" path="res://assets/close_stars.png" id="3_5ljfg"]

[node name="SpaceBackground" type="ParallaxBackground"]
script = ExtResource("1_xjvy5")

[node name="SpaceLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="Space" type="TextureRect" parent="SpaceLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("1_64rm2")
stretch_mode = 1

[node name="FarStarsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="FarStars" type="TextureRect" parent="FarStarsLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("2_raulv")
stretch_mode = 1

[node name="CloseStarsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="CloseStars" type="TextureRect" parent="CloseStarsLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("3_5ljfg")
stretch_mode = 1
